# valerie

./: README.md  pyproject.toml
configs/experiments/: threat-vs-care-v2.yaml  threat-vs-care.yaml
configs/models/: dummy.yaml  gpt2-small.yaml  tiny-stories-1m.yaml
configs/probes/: linear-framing.yaml
data/activations/threat-vs-care-mvp-v2_gpt2-small_20260413-022047/: manifest.json
data/activations/threat-vs-care-mvp_dummy-smoke-test_20260410-222902/: manifest.json  resolved_experiment_config.json  resolved_model_config.json
data/activations/threat-vs-care-mvp_tiny-stories-1m_20260410-223305/: manifest.json
data/patching/patching_threat-vs-care-mvp-v2_gpt2-small_20260413-022047_20260413-105440/: manifest.json
data/results/linear-framing-probe_threat-vs-care-mvp-v2_gpt2-small_20260413-022047_20260413-022225/: manifest.json  source_experiment_config.json  source_model_config.json
data/results/linear-framing-probe_threat-vs-care-mvp_gpt2-small_20260411-113704_20260411-113728/: manifest.json  source_activation_manifest.json
data/results/linear-framing-probe_threat-vs-care-mvp_tiny-stories-1m_20260410-223305_20260410-234215/: manifest.json  resolved_probe_config.json  source_model_config.json
docs/: README.md  architecture.md  artifacts.md  configs.md  experiments.md  findings.md  methodology.md  probes.md  quickstart.md  results.md  roadmap.md  runs.md
scripts/: run_experiment.py  train_probes.py
src/valerie/: __init__.py  config.py
src/valerie/analysis/: __init__.py  (+2 more)
tests/: test_config.py  test_framings.py  test_patching.py  test_pipeline.py
(+199 files in other folders)
